fix: Spendings value layout broken. #Solved

--- a/app/styles/partials/app/components/_spendings-meter.sass
+++ b/app/styles/partials/app/components/_spendings-meter.sass
@@ -7,6 +7,10 @@
   font-size: 3rem !important
   line-height: 3rem
 
+.current-spendings-value-cont
+  display: block
+  text-align: right
+
 .spendings-value
   font-size: 5rem !important
   line-height: 5rem
@@ -32,6 +36,8 @@
     margin: 0
     text-align: center
 
+.limit-indicator-cont
+  width: 100%
 
 .expenses-limmit-indicator
   width: 70%
